# esp_server

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  app_main.c
main/conn/: connectivity.c  connectivity.h  intf_wifi.c  intf_wifi.h
main/server/: server.c  server.h
webpages/: app.js  index.html  page1.html
